fix overflow

--- a/bmb.ua/css/style.css
+++ b/bmb.ua/css/style.css
@@ -5,6 +5,7 @@ font-family: 'Open Sans Condensed', sans-serif;
 body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 body * {
